--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>Cantina platform</title>
+    <title>Note app</title>
   </head>
   <body class="h-full font-body">
     <div id="app" class="h-full"></div>
